@@ -10,6 +10,8 @@
 	- TODO items from forgery-resilience draft.
 	  and on memory handling improvements.
 	- renamed module_event_timeout to module_event_noreply.
+	- memory reporting code; reports on memory usage after handling
+	  a network packet (not on cache replies).
 
 19 July 2007: Wouter
 	- shuffle NS selection when getting nameserver target addresses.
